--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -584,3 +584,106 @@ a {
 .install__google-play__logo {
     cursor: pointer;
 }
+
+.install__app-store__logo:hover,
+.install__google-play__logo:hover {
+    opacity: 0.85;
+}
+
+/* ============== Blog ============== */
+.blog {
+    margin-top: 170px;
+}
+
+.blog__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.blog__left {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+
+.blog__heading {
+    max-width: 470px;
+}
+
+.blog__more-info {
+    color: var(--primary-color);
+    font-family: "Inter", "sans-serif";
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.56; /* 155.556% */
+}
+
+.blog__more-info:hover {
+    text-decoration: solid underline;
+}
+
+.blog__next-btn {
+    width: 90px;
+    height: 36px;
+    cursor: pointer;
+}
+
+.blog__right {
+    display: flex;
+    gap: 30px;
+}
+
+.blog__item {
+    max-width: 270px;
+    border-radius: 12px;
+    background: #fff;
+    box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+    transition: 0.15s;
+    cursor: pointer;
+}
+
+.blog__item:hover {
+    border: 1px solid #e8ebee;
+    background: #fff;
+}
+
+.blog__item__img {
+    width: 100%;
+    height: 172px;
+    flex-shrink: 0;
+    object-fit: cover;
+    border-radius: 12px 12px 0px 0px;
+}
+
+.blog__item__body {
+    padding: 18px 22px 21px;
+}
+
+.blog__item__heading {
+    color: var(--primary-color);
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.625; /* 162.5% */
+}
+
+.blog__item__desc {
+    margin-top: 10px;
+    color: #575f66;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.7143; /* 171.429% */
+}
+
+.blog__item__link {
+    display: inline-block;
+    margin-top: 12px;
+    color: #2e80ce;
+    font-size: 1.4rem;
+    font-weight: 500;
+    transition: color 0.25s;
+}
+
+.blog__item__link:hover {
+    color: #10375c;
+}
